welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: '=' expected but ';' found.
	if (num+2==10*n || num-2==10*n)
^